<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/resultsLabel"
        app:layout_constraintEnd_toEndOf="@+id/label"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <EditText
        android:id="@+id/inchesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Enter value in inches"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/convertedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convertedValue"
        app:layout_constraintBottom_toBottomOf="@+id/resultsLabel"
        app:layout_constraintStart_toStartOf="@+id/inchesText" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="324dp"
        android:layout_height="194dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertedValue">

        <RadioButton
            android:id="@+id/meters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meters" />

        <RadioButton
            android:id="@+id/feet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feet" />

        <RadioButton
            android:id="@+id/miles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miles" />

        <RadioButton
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear" />
    </RadioGroup>

    <Button
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/convertButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>